Adds color variable and border-radius function

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,46 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$primary-color: #002480;
+
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+       -o-border-radius: $radius;
+          border-radius: $radius;
+}
+
+h1, h2, h3, h4, h5 {
+	color: $primary-color;
+}
+
+.post-preview {
+	border-bottom: 3px solid $primary-color; 
+}
+
+a, a:visited {
+	color: darken($primary-color, 30%);
+}
+
+article {
+	h1.title {
+  		font-style: italic;
+  	}
+
+	time {
+  		font {
+  			weight: bold;
+  			family: Verdana, Geneva, sans-serif;
+  			size: 0.8em;
+		}
+		padding: 4px;
+		border: 2px solid darken($primary-color, 10%);
+		@include border-radius(5px);
+	}
+
+	.body {
+		p {line-height: 1.5em};
+	}
+}
